# isdm-assignment

./: CIS_111_6_isdm_assignment.ipynb  CIS_111_6_isdm_assignment.md  CIS_111_6_weekly_report.ipynb  CIS_111_6_weekly_report_final.ipynb  CIS_111_6_weekly_report_final.md  CIS_111_6_weekly_report_final.txt  CIS_111_6_weekly_report_rev_1.ipynb  README.md  best_params_df.csv  dt_results.csv  pyproject.toml  results.csv  results_df.csv  sensitivity_summary.csv  summary.csv  test.html
